Split hypr folder

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # Set default shell and terminal
 set -g default-terminal "${TERM}"
-# set -g default-shell /usr/bin/zsh
+set -g default-shell /usr/bin/fish
 
 # Basic setup
 set -g mouse on
