--- a/tmux/.config/tmux/tmux.plugins.conf
+++ b/tmux/.config/tmux/tmux.plugins.conf
@@ -1,5 +1,3 @@
-
-
 # __Plugins__
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -11,11 +9,10 @@ set -g @plugin 'tmux-plugins/tmux-yank'  # for yank
 
 set -g @plugin 'T1erno/tmux-auto-renumber-session' # Auto renumber session
 
-set -g @plugin 'Nybkox/tmux-kanagawa'
+set -g @plugin 'catgoose/kanagawa-tmux' # Theme: Kanagawa
 
 #__Plugin setup__
 set -g @continuum-restore 'off'
 set -g @resurrect-capture-pane-contents 'off'
-set -g @kanagawa-theme 'wave'
 
 run '~/.config/tmux/plugins/tpm/tpm'
