--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/Pictures/wallpapers/sunset-car.jpg
-wallpaper = ,~/Pictures/wallpapers/sunset-car.jpg
+preload = ~/Pictures/wallpapers/arch_white.png
+wallpaper = ,~/Pictures/wallpapers/arch_white.png
 splash = true
 ipc = on
