--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -172,8 +172,8 @@ bind = SHIFT, PRINT, exec, hyprshot -m region
 #OSD window
 bind = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0%+ | swayosd-client --output-volume raise
 bind = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0%- | swayosd-client --output-volume lower
-bind = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+ | swayosd-client --brightness raise 
-bind = ,XF86MonBrightnessDown, exec, brightnessctl s 10%- | swayosd-client --brightness lower 
+bind = ,XF86MonBrightnessUp, exec, brightnessctl s 0%+ | swayosd-client --brightness raise 
+bind = ,XF86MonBrightnessDown, exec, brightnessctl s 0%- | swayosd-client --brightness lower 
 bind = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle 
 bind = ,Caps_Lock, exec, swayosd-client --caps-lock                     
 
@@ -210,6 +210,10 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
+
+# Lid Switch
+bindl=,switch:on:Lid Switch, exec, hyprctl dispatch dpms off && hyprctl dispatch exec hyprlock
+bindl=,switch:off:Lid Switch, exec, hyprctl dispatch dpms on
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
