--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -78,7 +78,7 @@
     "format": " {used:0.1f}G/{total:0.1f}G"
   },
   "clock": {
-    "format": "<span foreground='#f5c2e7'></span>{:%A %d %H:%M}",
+    "format": "<span foreground='#f5c2e7'></span>{:%A, %d - %H:%M}",
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
   },
   "battery": {
