--- a/tmux/.config/tmux/tmux.plugins.conf
+++ b/tmux/.config/tmux/tmux.plugins.conf
@@ -9,7 +9,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'  # for yank
 
 set -g @plugin 'T1erno/tmux-auto-renumber-session' # Auto renumber session
 
-set -g @plugin 'catgoose/kanagawa-tmux' # Theme: Kanagawa
+set -g @plugin 'rose-pine/tmux' # theme
 
 #__Plugin setup__
 set -g @continuum-restore 'off'
