--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -160,7 +160,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, M, fullscreen 
 bind = $mainMod, Y, togglefloating,
-bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, I, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 
 # System
@@ -188,8 +188,8 @@ bind = $mainMod CTRL, up, resizeactive, 0 -20
 bind = $mainMod CTRL, down, resizeactive, 0 20
 
 # Switch workspace and move window
-bind = SUPER, TAB, exec, hyprnome
-bind = SUPER_SHIFT, TAB, exec, hyprnome --previous
+bind = SUPER, N, exec, hyprnome
+bind = SUPER, P, exec, hyprnome --previous
 bind = SUPER, left, exec, hyprnome --previous --move
 bind = SUPER, right, exec, hyprnome --move
 
