--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ monitor=,preferred,auto,auto
 $terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show drun
-$browser = zen-browser
+$browser = flatpak run app.zen_browser.zen
 
 #################
 ### AUTOSTART ###
