--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -29,7 +29,6 @@ sync_to_monitor no
 
 force_ltr yes
 mouse_hide_wait 3.0
-shell_integration enable
 
 scrollback_lines 8000
 paste_actions quote-urls-at-prompt
@@ -37,12 +36,13 @@ strip_trailing_spaces never
 select_by_word_characters @-./_~?&=%+#
 show_hyperlink_targets yes
 remote_kitty if-needed
-cursor_shape beam
-cursor_underline_thickness 2.0
-cursor_blink_interval -1
-cursor_stop_blinking_after 15
-cursor none
-# cursor_text_color #444
+
+cursor_trail 10
+cursor_trail_start_threshold 0
+shell_integration no-cursor
+cursor_trail_decay 0.01 0.15
+cursor_shape block
+cursor_blink true
 
 confirm_os_window_close 1
 enable_audio_bell false
