--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -1,13 +1,20 @@
 bezier = linear, 1, 1, 0, 0
 animation = fade, 1, 1.8, linear
 
+# Background
 background {
     monitor =
-    path = screenshot
-    color = rgba(25, 20, 20, 1.0)
-    blur_passes = 2
+    path = $HOME/Pictures/wallpapers/arch_pink.png # NOTE only png supported for now
+    blur_size = 5
+    blur_passes = 1 # 0 disables blurring
+    noise = 0.0117
+    contrast = 1.3000 # Vibrant!!!
+    brightness = 0.8000
+    vibrancy = 0.2100
+    vibrancy_darkness = 0.0
 }
 
+# Input
 input-field {
     monitor =
     size = 20%, 5%
@@ -21,8 +28,106 @@ input-field {
     font_color = rgb(143, 143, 143)
     fade_on_empty = false
     rounding = 15
+    placeholder_text = <i>Password...</i>
 
-    position = 0, -20
+    position = 0, -200
     halign = center
     valign = center
+}
+
+# Hours
+label {
+    monitor =
+    text = cmd[update:1000] echo "<b><big> $(date +"%H") </big></b>"
+    # color = rgb(0,0,0)
+    font_size = 112
+    font_family = JetBrainsMonoNFM 10
+    shadow_passes = 3
+    shadow_size = 4
+
+    position = 0, 220
+    halign = center
+    valign = center
+}
+
+# Minutes
+label {
+    monitor =
+    text = cmd[update:1000] echo "<b><big> $(date +"%M") </big></b>"
+    color = $color6
+    font_size = 112
+    font_family = JetBrainsMonoNFM 10
+    shadow_passes = 3
+    shadow_size = 4
+
+    position = 0, 80
+    halign = center
+    valign = center
+}
+
+# Today
+label {
+    monitor =
+    text = cmd[update:18000000] echo "<b><big> "$(date +'%A')" </big></b>"
+    color = $color7
+    font_size = 22
+    font_family = JetBrainsMonoNFM 10
+
+    position = 0, -40
+    halign = center
+    valign = center
+}
+
+# Week
+label {
+    monitor =
+    text = cmd[update:18000000] echo "<b> "$(date +'%d %b')" </b>"
+    color = $color7
+    font_size = 18
+    font_family = JetBrainsMonoNFM 10
+
+    position = 0, -10
+    halign = center
+    valign = center
+}
+
+# Degrees
+label {
+    monitor =
+    text = cmd[update:18000000] echo "<b>Feels like $(curl -s 'wttr.in/Hanoi?format=%t' | tr -d '+')</b>"
+    color = $color7
+    font_size = 13
+    font_family = JetBrainsMonoNFM 10
+
+    position = 0, 40
+    halign = center
+    valign = bottom
+}
+
+# User
+label {
+    monitor =
+    text =  $USER
+    color = $color12
+    font_size = 16
+    font_family = JetBrainsMonoNFM
+
+    position = 0, -150
+    halign = center
+    valign = center
+}
+
+# Image
+image {
+    monitor =
+    path = $HOME/Pictures/wallpapers/sunset-car.jpg
+    size = 230
+    rounding = 120
+    border_size = 2
+    border_color = $color11
+    rotate = 0
+    reload_time = -1
+    position = 0, 300
+    halign = center
+    valign = bottom
 }
