--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -258,6 +258,6 @@ windowrulev2 = float, class:download
 windowrulev2 = float, class:notification
 windowrulev2 = float, class:error
 windowrulev2 = float, class:splash
-windowrulev2 = center,xwayland:1
+windowrulev2 = float,xwayland:1
 windowrulev2 = float,xwayland:1
 
