add icon for Workspace folder

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -111,6 +111,7 @@ truncation_symbol = "…/"
 "Music" = "󰝚 "
 "Pictures" = " "
 "Developer" = "󰲋 "
+"Workspace" = " "
 
 [git_branch]
 symbol = ""
