--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
 preload = ~/Pictures/wallpapers/arch_pink.png
 wallpaper = ,~/Pictures/wallpapers/arch_pink.png
-splash = true
+splash = false
 ipc = on
