--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -29,6 +29,7 @@
     "on-click": "fcitx5-configtool"
   },
   "custom/weather": {
+    "interval": 30,
     "format": "{}",
     "exec": "~/.config/scripts/checking-weather.sh"
   },
