--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -18,7 +18,7 @@ background {
 input-field {
     monitor =
     size = 20%, 5%
-    outline_thickness = 3
+    outline_thickness = 1
     inner_color = rgba(0, 0, 0, 0.0) # no fill
 
     outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
@@ -26,7 +26,7 @@ input-field {
     fail_color=rgba(ff6633ee) rgba(ff0066ee) 40deg
 
     font_color = rgb(143, 143, 143)
-    fade_on_empty = false
+    fade_on_empty = true
     rounding = 15
     placeholder_text = <i>Password...</i>
 
@@ -39,76 +39,76 @@ input-field {
 label {
     monitor =
     text = cmd[update:1000] echo "<b><big> $(date +"%H") </big></b>"
-    # color = rgb(0,0,0)
-    font_size = 112
+    color = rgb(255, 207, 80) 
+    font_size = 90
     font_family = JetBrainsMonoNFM 10
     shadow_passes = 3
     shadow_size = 4
 
-    position = 0, 220
-    halign = center
-    valign = center
+    position = 60, 20
+    halign = right
+    valign = top
 }
 
 # Minutes
 label {
     monitor =
     text = cmd[update:1000] echo "<b><big> $(date +"%M") </big></b>"
-    color = $color6
-    font_size = 112
+    color = rgb(224, 122, 95) 
+    font_size = 90
     font_family = JetBrainsMonoNFM 10
     shadow_passes = 3
     shadow_size = 4
 
-    position = 0, 80
-    halign = center
-    valign = center
+    position = 61, -50
+    halign = right
+    valign = top
 }
 
 # Today
 label {
     monitor =
     text = cmd[update:18000000] echo "<b><big> "$(date +'%A')" </big></b>"
-    color = $color7
+    color = rgb(214, 154, 222)
     font_size = 22
     font_family = JetBrainsMonoNFM 10
 
-    position = 0, -40
-    halign = center
-    valign = center
+    position = -10, -190
+    halign = right
+    valign = top
 }
 
 # Week
 label {
     monitor =
     text = cmd[update:18000000] echo "<b> "$(date +'%d %b')" </b>"
-    color = $color7
+    color = rgb(244, 204, 233)
     font_size = 18
     font_family = JetBrainsMonoNFM 10
 
-    position = 0, -10
-    halign = center
-    valign = center
+    position = -28, -230
+    halign = right
+    valign = top
 }
 
 # Degrees
 label {
     monitor =
-    text = cmd[update:18000000] echo "<b>Feels like $(curl -s 'wttr.in/Hanoi?format=%t' | tr -d '+')</b>"
-    color = $color7
+    text = cmd[update:18000000] echo "<b>Feels like $(curl -s 'wttr.in/Sontay?format=%t' | tr -d '+')</b>"
+    color = rgb(255, 157, 35)
     font_size = 13
     font_family = JetBrainsMonoNFM 10
 
-    position = 0, 40
-    halign = center
-    valign = bottom
+    position = 20, -20
+    halign = left
+    valign = top
 }
 
 # User
 label {
     monitor =
     text =  $USER
-    color = $color12
+    color = rgb(255, 239, 200) 
     font_size = 16
     font_family = JetBrainsMonoNFM
 
@@ -120,11 +120,11 @@ label {
 # Image
 image {
     monitor =
-    path = $HOME/Pictures/wallpapers/sunset-car.jpg
+    path = $HOME/Pictures/7c9fa5093b168548dc07.jpg
     size = 230
     rounding = 120
     border_size = 2
-    border_color = $color11
+    border_color = rgb(255, 239, 200)
     rotate = 0
     reload_time = -1
     position = 0, 300
