--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -35,88 +35,119 @@ exec-once = ~/.config/scripts/auto-start.sh
 #############################
 
 env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
+
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_QPA_PLATFORMTHEME,qt5ct
+
+env = MOZ_ENABLE_WAYLAND,1
+env = GDK_SCALE,1
+env = SDL_VIDEODRIVER,wayland
+
+env = ELECTRON_ENABLE_WAYLAND, 1
+env = ELECTRON_OZONE_PLATFORM_HINT, wayland
 
 #####################
 ### LOOK AND FEEL ###
 #####################
 general {
-    gaps_in = 3
-    gaps_out = 8
-    border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-    resize_on_border = true
-    allow_tearing = false
-    layout = dwindle
+  gaps_in = 3
+  gaps_out = 8
+  border_size = 2
+  col.active_border = rgb(ee99a0) 
+  col.inactive_border = rgba(595959aa)
+  resize_on_border = true
+  allow_tearing = false
+  layout = dwindle
 }
 
 decoration {
-    rounding = 4
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-    shadow {
-        enabled = true
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
-    }
-    blur {
-        enabled = true
-        size = 3
-        passes = 1
-        vibrancy = 0.1696
-    }
+  rounding = 4
+  blur {
+    enabled = true
+    size = 2
+    passes = 2
+  }
+  active_opacity = 1
+  inactive_opacity = 1
+  fullscreen_opacity = 1
+  shadow {
+    enabled = true
+    range = 10
+    render_power = 3
+    color = 0x66000000
+  }
 }
 
-# animations {
-#     enabled = true
-#     bezier = easeOutQuint,0.23,1,0.32,1
-#     bezier = easeInOutCubic,0.65,0.05,0.36,1
-#     bezier = linear,0,0,1,1
-#     bezier = almostLinear,0.5,0.5,0.75,1.0
-#     bezier = quick,0.15,0,0.1,1
-#     animation = global, 1, 10, default
-#     animation = border, 1, 5.39, easeOutQuint
-#     animation = windows, 1, 4.79, easeOutQuint
-#     animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-#     animation = windowsOut, 1, 1.49, linear, popin 87%
-#     animation = fadeIn, 1, 1.73, almostLinear
-#     animation = fadeOut, 1, 1.46, almostLinear
-#     animation = fade, 1, 3.03, quick
-#     animation = layers, 1, 3.81, easeOutQuint
-#     animation = layersIn, 1, 4, easeOutQuint, fade
-#     animation = layersOut, 1, 1.5, linear, fade
-#     animation = fadeLayersIn, 1, 1.79, almostLinear
-#     animation = fadeLayersOut, 1, 1.39, almostLinear
-#     animation = workspaces, 1, 1.94, almostLinear, fade
-#     animation = workspacesIn, 1, 1.21, almostLinear, fade
-#     animation = workspacesOut, 1, 1.94, almostLinear, fade
-# }
 
 animations {
-    enabled = true
-    bezier = overshot, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 7, overshot,slide
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default, loop
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+  enabled = true
+# Animation curves
+
+  bezier = linear, 0, 0, 1, 1
+  bezier = md3_standard, 0.2, 0, 0, 1
+  bezier = md3_decel, 0.05, 0.7, 0.1, 1
+  bezier = md3_accel, 0.3, 0, 0.8, 0.15
+  bezier = overshot, 0.05, 0.9, 0.1, 1.1
+  bezier = crazyshot, 0.1, 1.5, 0.76, 0.92 
+  bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
+  bezier = menu_decel, 0.1, 1, 0, 1
+  bezier = menu_accel, 0.38, 0.04, 1, 0.07
+  bezier = easeInOutCirc, 0.85, 0, 0.15, 1
+  bezier = easeOutCirc, 0, 0.55, 0.45, 1
+  bezier = easeOutExpo, 0.16, 1, 0.3, 1
+  bezier = softAcDecel, 0.26, 0.26, 0.15, 1
+  bezier = md2, 0.4, 0, 0.2, 1 # use with .2s duration
+# Animation configs
+  animation = windows, 1, 3, md3_decel, popin 60%
+  animation = windowsIn, 1, 3, md3_decel, popin 60%
+  animation = windowsOut, 1, 3, md3_accel, popin 60%
+  animation = border, 1, 10, default
+  animation = fade, 1, 3, md3_decel
+  animation = layers, 1, 2, md3_decel, slide
+  animation = layersIn, 1, 3, menu_decel, slide
+  animation = layersOut, 1, 1.6, menu_accel, slide
+  animation = fadeLayersIn, 1, 2, menu_decel
+  animation = fadeLayersOut, 1, 4.5, menu_accel
+  animation = workspaces, 1, 7, menu_decel, slide
+  animation = workspaces, 1, 2.5, softAcDecel, slide
+  animation = workspaces, 1, 7, menu_decel, slidefade 15%
+  animation = specialWorkspace, 1, 3, md3_decel, slidefadevert 15%
+  animation = specialWorkspace, 1, 3, md3_decel, slidevert
 }
 
 dwindle {
-    pseudotile = true
-    preserve_split = true
+  pseudotile = true
+  preserve_split = true
 }
 
 master {
-    new_status = master
+  smart_resizing = true
+  new_on_active = true
+  drop_at_cursor = true
+  new_status = master
 }
 
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+  vfr = 1
+  vrr = 1
+# layers_hog_mouse_focus = true
+  animate_manual_resizes = false
+  animate_mouse_windowdragging = false
+  enable_swallow = false
+  swallow_regex = (foot|kitty|alacritty|Alacritty)
+  disable_splash_rendering = true
+
+  disable_hyprland_logo = true
+  force_default_wallpaper = 0
+  new_window_takes_over_fullscreen = 2
+  allow_session_lock_restore = true
+
+  initial_workspace_tracking = false
 }
 
 #############
@@ -124,25 +155,32 @@ misc {
 #############
 
 input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-    follow_mouse = 1
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    touchpad {
-        natural_scroll = true
-    }
+  kb_layout = us
+  kb_variant =
+  kb_model =
+  kb_options =
+  kb_rules =
+  follow_mouse = 1
+  sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+  touchpad {
+      natural_scroll = true
+  }
 }
 
 gestures {
-    workspace_swipe = true
+  workspace_swipe = true
+  workspace_swipe_distance = 700
+  workspace_swipe_fingers = 3
+  workspace_swipe_cancel_ratio = 0.2
+  workspace_swipe_min_speed_to_force = 5
+  workspace_swipe_direction_lock = true
+  workspace_swipe_direction_lock_threshold = 10
+  workspace_swipe_create_new = true
 }
 
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+  name = epic-mouse-v1
+  sensitivity = -0.5
 }
 
 
@@ -261,3 +299,57 @@ windowrulev2 = float, class:splash
 windowrulev2 = float,xwayland:1
 windowrulev2 = float,xwayland:1
 
+# ######## Window rules ########
+windowrule = tile,^(Microsoft-edge)$
+windowrule = tile,^(Brave-browser)$
+windowrule = tile,^(Chromium)$
+windowrule = float,^(blueman-manager)$
+windowrule = float, ^(blueberry.py)$
+windowrule = float,^(nm-connection-editor)$
+windowrule = float,^(qalculate-gtk)$
+windowrule = float, ^(steam)$
+windowrule = float, ^(com.github.Aylur.ags)$
+windowrulev2 = stayfocused, title:^()$,class:^(steam)$
+windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
+windowrule = center 1,floating:1
+windowrule=float,title:^(Volume Control)(.*)$
+
+# Xwaylandvideobridge (if installed)
+windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+
+# Dialogs
+windowrule=float,title:^(Open File)(.*)$
+windowrule=float,title:^(Select a File)(.*)$
+windowrule=float,title:^(Choose wallpaper)(.*)$
+windowrule=float,title:^(Open Folder)(.*)$
+windowrule=float,title:^(Save As)(.*)$
+windowrule=float,title:^(Library)(.*)$
+windowrule=float,title:^(File Upload)(.*)$
+
+# Tearing
+windowrule=immediate,.*\.exe
+windowrulev2=immediate,class:(steam_app)455
+
+# ######## Layer rules ########
+# layerrule = xray 1, .*
+# layerrule = noanim, .*
+layerrule = noanim, walker
+layerrule = noanim, selection
+layerrule = noanim, overview
+layerrule = noanim, anyrun
+layerrule = noanim, popup.*
+layerrule = noanim, hyprpicker
+
+layerrule = noanim, noanim
+layerrule = blur, gtk-layer-shell
+layerrule = ignorezero, gtk-layer-shell
+layerrule = blur, launcher
+layerrule = ignorealpha 0.5, launcher
+layerrule = blur, notifications
+layerrule = ignorealpha 0.69, notifications
+
+layerrule = noanim, notifications
