add more keymaps

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -269,6 +269,12 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 # bind = $mainMod, S, togglespecialworkspace, magic
 # bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
+# Move window with mainMod + SHIFT + arrow keys
+bind = SUPER SHIFT, H, movewindow, l
+bind = SUPER SHIFT, L, movewindow, r
+bind = SUPER SHIFT, K, movewindow, u
+bind = SUPER SHIFT, J, movewindow, d 
+
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -276,6 +282,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
