--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/Pictures/wallpapers/arch_pink.png
-wallpaper = ,~/Pictures/wallpapers/arch_pink.png
+preload = ~/Pictures/wallpapers/eagle-sunset.jpg
+wallpaper = ,~/Pictures/wallpapers/eagle-sunset.jpg
 splash = false
 ipc = on
