add more keymaps

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -228,6 +228,8 @@ bind = $mainMod CTRL, down, resizeactive, 0 20
 # Switch workspace and move window
 bind = SUPER, N, exec, hyprnome
 bind = SUPER, P, exec, hyprnome --previous
+bind = SUPER shift, N, exec, hyprnome --move
+bind = SUPER shift, P, exec, hyprnome --previous --move
 bind = SUPER, left, exec, hyprnome --previous --move
 bind = SUPER, right, exec, hyprnome --move
 
