--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -193,7 +193,7 @@ $reverse = grave
 
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod, ESCAPE, exit,
+# bind = $mainMod, ESCAPE, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, M, fullscreen 
@@ -203,7 +203,7 @@ bind = $mainMod, O, togglesplit, # dwindle
 
 # System
 bind = $mainMod, B, exec, $browser
-bind = $mainMod ctrl, L, exec, pactl set-sink-mute @DEFAULT_SINK@ 1 && hyprlock
+bind = $mainMod, ESCAPE, exec, wlogout
 bind = ,PRINT, exec, hyprshot -m window
 bind = SHIFT, PRINT, exec, hyprshot -m region
 
