disable power button

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -16,8 +16,8 @@
     "bluetooth",
     "pulseaudio",
     "backlight",
-    "battery",
-    "custom/power"
+    "battery"
+    // "custom/power"
   ],
   //
   // Custom modules
