--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -55,13 +55,13 @@ env = ELECTRON_OZONE_PLATFORM_HINT, wayland
 ### LOOK AND FEEL ###
 #####################
 general {
-  gaps_in = 3
+  gaps_in = 4
   gaps_out = 8
   border_size = 2
   col.active_border = rgb(ee99a0) 
   col.inactive_border = rgba(595959aa)
   resize_on_border = true
-  allow_tearing = false
+  allow_tearing = true
   layout = dwindle
 }
 
