change vi keybind and add lazysql keybind

--- a/tmux/.config/tmux/tmux.keybinds.conf
+++ b/tmux/.config/tmux/tmux.keybinds.conf
@@ -32,10 +32,11 @@ bind b set-option -g status
 
 # for Vim mode
 unbind [
-bind V copy-mode
+bind i copy-mode
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 
-# Display lazygit
+# Display lazy tools
 bind -r g display-popup -d '#{pane_current_path}' -w80% -h80% -E lazygit
+bind -r e display-popup -d '#{pane_current_path}' -w90% -h90% -E lazysql
