turn off user on tmux status bar

--- a/tmux/.config/tmux/tmux.status.conf
+++ b/tmux/.config/tmux/tmux.status.conf
@@ -2,7 +2,7 @@ set -g @rose_pine_variant 'moon' # 'main', 'moon' or 'dawn'
 
 set -g @rose_pine_host 'off'
 set -g @rose_pine_date_time '%H:%M'
-set -g @rose_pine_user 'on'
+set -g @rose_pine_user 'off'
 set -g @rose_pine_directory 'on'
 
 set -g @rose_pine_bar_bg_disable 'on'
