--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -225,6 +225,11 @@ bind = $mainMod CTRL, left, resizeactive, -20 0
 bind = $mainMod CTRL, up, resizeactive, 0 -20
 bind = $mainMod CTRL, down, resizeactive, 0 20
 
+bind = $mainMod CTRL, l, resizeactive, 20 0
+bind = $mainMod CTRL, h, resizeactive, -20 0
+bind = $mainMod CTRL, k, resizeactive, 0 -20
+bind = $mainMod CTRL, j, resizeactive, 0 20
+
 # Switch workspace and move window
 bind = SUPER, N, exec, hyprnome
 bind = SUPER, P, exec, hyprnome --previous
