--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -257,7 +257,7 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Lid Switch
-bindl=,switch:on:Lid Switch, exec, hyprctl dispatch dpms off && hyprctl dispatch exec hyprlock
+bindl=,switch:on:Lid Switch, exec, hyprctl dispatch dpms off & hyprctl dispatch exec hyprlock
 bindl=,switch:off:Lid Switch, exec, hyprctl dispatch dpms on
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
