--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -257,8 +257,7 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Lid Switch
-bindl=,switch:on:Lid Switch, exec, hyprctl dispatch dpms off & hyprctl dispatch exec hyprlock
-bindl=,switch:off:Lid Switch, exec, hyprctl dispatch dpms on
+bindl=,switch:on:Lid Switch, exec, loginctl lock-session
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
