--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -14,8 +14,8 @@ monitor=,preferred,auto,auto
 ### MY PROGRAMS ###
 ###################
 $terminal = kitty
-$fileManager = dolphin
-$menu = wofi --show drun
+$fileManager = thunar
+$menu = wofi --insensitive --show drun
 $browser = zen-browser
 
 #################
