--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -36,3 +36,4 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 source-file ~/.config/tmux/tmux.keybinds.conf
 source-file ~/.config/tmux/tmux.status.conf
 source-file ~/.config/tmux/tmux.plugins.conf
+source-file ~/.config/tmux/tmux.sesstion.conf
