--- a/tmux/.config/tmux/tmux.plugins.conf
+++ b/tmux/.config/tmux/tmux.plugins.conf
@@ -11,6 +11,8 @@ set -g @plugin 'T1erno/tmux-auto-renumber-session' # Auto renumber session
 
 set -g @plugin 'rose-pine/tmux' # theme
 
+set -g @plugin 'omerxx/tmux-sessionx' # session manager
+
 #__Plugin setup__
 set -g @continuum-restore 'off'
 set -g @resurrect-capture-pane-contents 'off'
