--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -35,5 +35,5 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 # Plugins and keybinds
 source-file ~/.config/tmux/tmux.keybinds.conf
 source-file ~/.config/tmux/tmux.status.conf
+source-file ~/.config/tmux/tmux.session.conf
 source-file ~/.config/tmux/tmux.plugins.conf
-source-file ~/.config/tmux/tmux.sesstion.conf
