--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -192,7 +192,7 @@
     "format-on": "󰂯 {status}",
     "format-off": "󰂲 {status}",
     "format-disabled": "󰂲 Disabled",
-    "format-connected": "󰂱 {num_connections}",
+    "format-connected": "󰂱  {device_alias}",
     "tooltip-format": "{controller_alias}\t{controller_address}",
     "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
     "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}"
