--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/Pictures/wallpapers/minan.jpg
-wallpaper = ,~/Pictures/wallpapers/minan.jpg
+preload = ~/Pictures/wallpapers/sky.png
+wallpaper = ,~/Pictures/wallpapers/sky.png
 splash = false
 ipc = on
