--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -4,7 +4,7 @@ animation = fade, 1, 1.8, linear
 # Background
 background {
     monitor =
-    path = $HOME/Pictures/wallpapers/arch_pink.png # NOTE only png supported for now
+    path = ~/dotfiles/wallpapers/maoriginalphotography.jpg # NOTE only png supported for now
     blur_size = 5
     blur_passes = 1 # 0 disables blurring
     noise = 0.0117
@@ -112,7 +112,7 @@ label {
     font_size = 16
     font_family = JetBrainsMonoNFM
 
-    position = 0, -150
+    position = 0, -110
     halign = center
     valign = center
 }
@@ -120,14 +120,14 @@ label {
 # Image
 image {
     monitor =
-    path = $HOME/Pictures/7c9fa5093b168548dc07.jpg
-    size = 230
+    path = ~/dotfiles/images/avatar.jpg
+    size = 100,100
     rounding = 120
     border_size = 2
     border_color = rgb(255, 239, 200)
     rotate = 0
     reload_time = -1
-    position = 0, 300
+    # position = 0, 300
     halign = center
-    valign = bottom
+    valign = center
 }
