--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/dotfiles/wallpapers/nature-arch.png
-wallpaper = ,~/dotfiles/wallpapers/nature-arch.png
+preload = ~/dotfiles/wallpapers/maoriginalphotography.jpg
+wallpaper = ,~/dotfiles/wallpapers/maoriginalphotography.jpg
 splash = false
 ipc = on
