--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,10 +7,10 @@ include ./kanagawa-wave.conf
 # │                   Font and text config                   │
 # ╰──────────────────────────────────────────────────────────╯
 font_size 14
-font_family      JetBrainsMonoNFM-Regular
-bold_font        JetBrainsMonoNFM-ExtraBold
-italic_font      JetBrainsMonoNFM-MediumItalic
-bold_italic_font JetBrainsMonoNFM-ExtraBoldItalic
+font_family      Cascadia Code NF
+bold_font        auto 
+italic_font      auto
+bold_italic_font auto
 
 modify_font underline_position 2
 modify_font underline_thickness 150%
