--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -65,7 +65,11 @@
     },
     {
       "type": "shell",
-      "key": "{#separator}│  {#keys}󰞷 Shell"
+      "key": "{#separator}│  {#keys} Shell"
+    },
+    {
+      "type": "terminal",
+      "key": "{#separator}│  {#keys} Terminal"
     },
     {
       "type": "terminalfont",
