--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ monitor=,preferred,auto,auto
 $terminal = kitty
 $fileManager = thunar
 $menu = wofi --insensitive --show drun
-$browser = zen-browser
+$browser = zen-twilight
 
 #################
 ### AUTOSTART ###
