--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -55,6 +55,8 @@ map super+v paste_from_clipboard
 map ctrl+0 change_font_size all 0
 map ctrl+shift+t no_op
 map ctrl+backspace send_text all \x17
+map alt+h send_text all \x1b[D
+map alt+l send_text all \x1b[C
 
 # ╭──────────────────────────────────────────────────────────╮
 # │                    Windows and sizes                     │
