--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -22,6 +22,7 @@ $browser = zen-twilight
 ### AUTOSTART ###
 #################
 
+exec-once = swaybg -i ~/dotfiles/wallpapers/not-arch.jpg
 exec-once = waybar & swaync & hypridle & hyprpaper
 exec-once = swayosd-server
 exec-once = swayosd-libinput-backend
@@ -29,6 +30,7 @@ exec-once = fcitx5
 
 # Startup scripts
 exec-once = ~/.config/scripts/auto-start.sh
+exec-once = ~/.config/scripts/auto-change-wallpaper.sh
 
 #############################
 ### ENVIRONMENT VARIABLES ###
