--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,4 +1,34 @@
+preload = ~/dotfiles/wallpapers/arch_pink.png
+preload = ~/dotfiles/wallpapers/arch_red.png
+preload = ~/dotfiles/wallpapers/arch_white.png
+preload = ~/dotfiles/wallpapers/cat.jpg
+preload = ~/dotfiles/wallpapers/eagle-sunset.jpg
+preload = ~/dotfiles/wallpapers/low-poly-arch.png
 preload = ~/dotfiles/wallpapers/maoriginalphotography.jpg
-wallpaper = ,~/dotfiles/wallpapers/maoriginalphotography.jpg
+preload = ~/dotfiles/wallpapers/minan.jpg
+preload = ~/dotfiles/wallpapers/nature-arch.png
+preload = ~/dotfiles/wallpapers/not-arch.jpg
+preload = ~/dotfiles/wallpapers/pexels-pixabay-33045.jpg
+preload = ~/dotfiles/wallpapers/pixel-arch.png
+preload = ~/dotfiles/wallpapers/sky.png
+preload = ~/dotfiles/wallpapers/sunlight.jpg
+preload = ~/dotfiles/wallpapers/sunset-car.jpg
+
+wallpaper = ~/dotfiles/wallpapers/arch_pink.png
+wallpaper = ~/dotfiles/wallpapers/arch_red.png
+wallpaper = ~/dotfiles/wallpapers/arch_white.png
+wallpaper = ~/dotfiles/wallpapers/cat.jpg
+wallpaper = ~/dotfiles/wallpapers/eagle-sunset.jpg
+wallpaper = ~/dotfiles/wallpapers/low-poly-arch.png
+wallpaper = ~/dotfiles/wallpapers/maoriginalphotography.jpg
+wallpaper = ~/dotfiles/wallpapers/minan.jpg
+wallpaper = ~/dotfiles/wallpapers/nature-arch.png
+wallpaper = ~/dotfiles/wallpapers/not-arch.jpg
+wallpaper = ~/dotfiles/wallpapers/pexels-pixabay-33045.jpg
+wallpaper = ~/dotfiles/wallpapers/pixel-arch.png
+wallpaper = ~/dotfiles/wallpapers/sky.png
+wallpaper = ~/dotfiles/wallpapers/sunlight.jpg
+wallpaper = ~/dotfiles/wallpapers/sunset-car.jpg
+
 splash = false
 ipc = on
