--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -233,12 +233,12 @@ bind = $mainMod CTRL, k, resizeactive, 0 -20
 bind = $mainMod CTRL, j, resizeactive, 0 20
 
 # Switch workspace and move window
-bind = SUPER, N, exec, hyprnome
-bind = SUPER, P, exec, hyprnome --previous
-bind = SUPER shift, N, exec, hyprnome --move
-bind = SUPER shift, P, exec, hyprnome --previous --move
-bind = SUPER, left, exec, hyprnome --previous --move
-bind = SUPER, right, exec, hyprnome --move
+bind = SUPER, N, exec, hyprctl dispatch workspace $(($(hyprctl activeworkspace -j | jq .id) + 1))
+bind = SUPER, P, exec, hyprctl dispatch workspace $(($(hyprctl activeworkspace -j | jq .id) - 1))
+bind = SUPER shift, N, exec, hyprctl dispatch movetoworkspace $(($(hyprctl activeworkspace -j | jq .id) + 1))
+bind = SUPER shift, P, exec, hyprctl dispatch movetoworkspace $(($(hyprctl activeworkspace -j | jq .id) - 1))
+bind = SUPER, left, exec, hyprctl dispatch workspace $(($(hyprctl activeworkspace -j | jq .id) - 1))
+bind = SUPER, right, exec, hyprctl dispatch workspace $(($(hyprctl activeworkspace -j | jq .id) + 1))
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
