chore: 🤖 change default wallpaper

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -22,7 +22,7 @@ $browser = zen-twilight
 ### AUTOSTART ###
 #################
 
-exec-once = swaybg -i ~/dotfiles/wallpapers/not-arch.jpg
+exec-once = swaybg -i ~/dotfiles/wallpapers/1.jpg
 exec-once = waybar & swaync & hypridle & hyprpaper
 exec-once = swayosd-server
 exec-once = swayosd-libinput-backend
