--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,34 +1,50 @@
-preload = ~/dotfiles/wallpapers/arch_pink.png
-preload = ~/dotfiles/wallpapers/arch_red.png
-preload = ~/dotfiles/wallpapers/arch_white.png
-preload = ~/dotfiles/wallpapers/cat.jpg
-preload = ~/dotfiles/wallpapers/eagle-sunset.jpg
-preload = ~/dotfiles/wallpapers/low-poly-arch.png
-preload = ~/dotfiles/wallpapers/maoriginalphotography.jpg
-preload = ~/dotfiles/wallpapers/minan.jpg
-preload = ~/dotfiles/wallpapers/nature-arch.png
-preload = ~/dotfiles/wallpapers/not-arch.jpg
-preload = ~/dotfiles/wallpapers/pexels-pixabay-33045.jpg
-preload = ~/dotfiles/wallpapers/pixel-arch.png
-preload = ~/dotfiles/wallpapers/sky.png
-preload = ~/dotfiles/wallpapers/sunlight.jpg
-preload = ~/dotfiles/wallpapers/sunset-car.jpg
+preload = ~/dotfiles/wallpapers/1.jpg
+preload = ~/dotfiles/wallpapers/2.jpg
+preload = ~/dotfiles/wallpapers/3.jpg
+preload = ~/dotfiles/wallpapers/4.jpg
+preload = ~/dotfiles/wallpapers/5.jpg
+preload = ~/dotfiles/wallpapers/6.jpg
+preload = ~/dotfiles/wallpapers/7.jpg
+preload = ~/dotfiles/wallpapers/8.jpg
+preload = ~/dotfiles/wallpapers/9.jpg
+preload = ~/dotfiles/wallpapers/10.jpg
+preload = ~/dotfiles/wallpapers/11.jpg
+preload = ~/dotfiles/wallpapers/12.jpg
+preload = ~/dotfiles/wallpapers/13.jpg
+preload = ~/dotfiles/wallpapers/14.jpg
+preload = ~/dotfiles/wallpapers/15.jpg
+preload = ~/dotfiles/wallpapers/16.jpg
+preload = ~/dotfiles/wallpapers/17.jpg
+preload = ~/dotfiles/wallpapers/18.jpg
+preload = ~/dotfiles/wallpapers/19.jpg
+preload = ~/dotfiles/wallpapers/20.jpg
+preload = ~/dotfiles/wallpapers/21.jpg
+preload = ~/dotfiles/wallpapers/22.jpg
+preload = ~/dotfiles/wallpapers/23.jpg
 
-wallpaper = ~/dotfiles/wallpapers/arch_pink.png
-wallpaper = ~/dotfiles/wallpapers/arch_red.png
-wallpaper = ~/dotfiles/wallpapers/arch_white.png
-wallpaper = ~/dotfiles/wallpapers/cat.jpg
-wallpaper = ~/dotfiles/wallpapers/eagle-sunset.jpg
-wallpaper = ~/dotfiles/wallpapers/low-poly-arch.png
-wallpaper = ~/dotfiles/wallpapers/maoriginalphotography.jpg
-wallpaper = ~/dotfiles/wallpapers/minan.jpg
-wallpaper = ~/dotfiles/wallpapers/nature-arch.png
-wallpaper = ~/dotfiles/wallpapers/not-arch.jpg
-wallpaper = ~/dotfiles/wallpapers/pexels-pixabay-33045.jpg
-wallpaper = ~/dotfiles/wallpapers/pixel-arch.png
-wallpaper = ~/dotfiles/wallpapers/sky.png
-wallpaper = ~/dotfiles/wallpapers/sunlight.jpg
-wallpaper = ~/dotfiles/wallpapers/sunset-car.jpg
+wallpaper = ~/dotfiles/wallpapers/1.jpg
+wallpaper = ~/dotfiles/wallpapers/2.jpg
+wallpaper = ~/dotfiles/wallpapers/3.jpg
+wallpaper = ~/dotfiles/wallpapers/4.jpg
+wallpaper = ~/dotfiles/wallpapers/5.jpg
+wallpaper = ~/dotfiles/wallpapers/6.jpg
+wallpaper = ~/dotfiles/wallpapers/7.jpg
+wallpaper = ~/dotfiles/wallpapers/8.jpg
+wallpaper = ~/dotfiles/wallpapers/9.jpg
+wallpaper = ~/dotfiles/wallpapers/10.jpg
+wallpaper = ~/dotfiles/wallpapers/11.jpg
+wallpaper = ~/dotfiles/wallpapers/12.jpg
+wallpaper = ~/dotfiles/wallpapers/13.jpg
+wallpaper = ~/dotfiles/wallpapers/14.jpg
+wallpaper = ~/dotfiles/wallpapers/15.jpg
+wallpaper = ~/dotfiles/wallpapers/16.jpg
+wallpaper = ~/dotfiles/wallpapers/17.jpg
+wallpaper = ~/dotfiles/wallpapers/18.jpg
+wallpaper = ~/dotfiles/wallpapers/19.jpg
+wallpaper = ~/dotfiles/wallpapers/20.jpg
+wallpaper = ~/dotfiles/wallpapers/21.jpg
+wallpaper = ~/dotfiles/wallpapers/22.jpg
+wallpaper = ~/dotfiles/wallpapers/23.jpg
 
 splash = false
 ipc = on
