--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -29,8 +29,9 @@ exec-once = swayosd-libinput-backend
 exec-once = fcitx5
 
 # Startup scripts
-exec-once = ~/.config/scripts/auto-start.sh
-exec-once = ~/.config/scripts/auto-change-wallpaper.sh
+exec-once = ~/dotfiles/scripts/.config/scripts/auto-start.sh
+exec-once = ~/dotfiles/scripts/.config/scripts/auto-change-wallpaper.sh
+exec-once = ~/dotfiles/scripts/.config/scripts/battery-notify.sh
 
 #############################
 ### ENVIRONMENT VARIABLES ###
