--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -4,7 +4,7 @@ animation = fade, 1, 1.8, linear
 # Background
 background {
     monitor =
-    path = ~/dotfiles/wallpapers/maoriginalphotography.jpg # NOTE only png supported for now
+    path = ~/dotfiles/wallpapers/18.jpg
     blur_size = 5
     blur_passes = 1 # 0 disables blurring
     noise = 0.0117
@@ -39,7 +39,7 @@ input-field {
 label {
     monitor =
     text = cmd[update:1000] echo "<b><big> $(date +"%H") </big></b>"
-    color = rgb(255, 207, 80) 
+    color = rgb(255, 207, 80)
     font_size = 90
     font_family = JetBrainsMonoNFM 10
     shadow_passes = 3
@@ -54,7 +54,7 @@ label {
 label {
     monitor =
     text = cmd[update:1000] echo "<b><big> $(date +"%M") </big></b>"
-    color = rgb(224, 122, 95) 
+    color = rgb(224, 122, 95)
     font_size = 90
     font_family = JetBrainsMonoNFM 10
     shadow_passes = 3
@@ -108,7 +108,7 @@ label {
 label {
     monitor =
     text =  $USER
-    color = rgb(255, 239, 200) 
+    color = rgb(255, 239, 200)
     font_size = 16
     font_family = JetBrainsMonoNFM
 
