--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@ include ./kanagawa-wave.conf
 # │                   Font and text config                   │
 # ╰──────────────────────────────────────────────────────────╯
 font_size 13.5
-font_family      Cascadia Code NF
+font_family      JetBrainsMonoNF-Light
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -27,7 +27,7 @@ adjust_line_height  100%
 editor nvim
 sync_to_monitor no
 
-force_ltr yes
+force_ltr no
 mouse_hide_wait 3.0
 
 scrollback_lines 8000
@@ -55,8 +55,8 @@ map super+v paste_from_clipboard
 map ctrl+0 change_font_size all 0
 map ctrl+shift+t no_op
 map ctrl+backspace send_text all \x17
-map alt+h send_text all \x1b[D
-map alt+l send_text all \x1b[C
+# map alt+h send_text all \x1b[D
+# map alt+l send_text all \x1b[C
 
 # ╭──────────────────────────────────────────────────────────╮
 # │                    Windows and sizes                     │
