--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@ include ./kanagawa-wave.conf
 # │                   Font and text config                   │
 # ╰──────────────────────────────────────────────────────────╯
 font_size 13.5
-font_family      JetBrainsMonoNF-Light
+font_family      JetBrainsMonoNFM-Light
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
