--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,8 +1,8 @@
-source = ~/dotfiles/hyprland-setup/.config/hypr/hyprland/auto-generated.conf
-source = ~/dotfiles/hyprland-setup/.config/hypr/hyprland/monitor.conf
-source = ~/dotfiles/hyprland-setup/.config/hypr/hyprland/auto-start.conf
-source = ~/dotfiles/hyprland-setup/.config/hypr/hyprland/eviroment-variables.conf
-source = ~/dotfiles/hyprland-setup/.config/hypr/hyprland/decoration.conf
-source = ~/dotfiles/hyprland-setup/.config/hypr/hyprland/device.conf
-source = ~/dotfiles/hyprland-setup/.config/hypr/hyprland/keybinds.conf
-source = ~/dotfiles/hyprland-setup/.config/hypr/hyprland/layers.conf
+source = ~/.config/hypr/hyprland/auto-generated.conf
+source = ~/.config/hypr/hyprland/monitor.conf
+source = ~/.config/hypr/hyprland/auto-start.conf
+source = ~/.config/hypr/hyprland/eviroment-variables.conf
+source = ~/.config/hypr/hyprland/decoration.conf
+source = ~/.config/hypr/hyprland/device.conf
+source = ~/.config/hypr/hyprland/keybinds.conf
+source = ~/.config/hypr/hyprland/layers.conf
