--- a/hyprlock/.config/hypr/hyprlock.conf
+++ b/hyprlock/.config/hypr/hyprlock.conf
@@ -4,7 +4,7 @@ animation = fade, 1, 1.8, linear
 # Background
 background {
     monitor =
-    path = ~/dotfiles/wallpapers/18.jpg
+    path = ~/Pictures/wallpapers/18.jpg
     blur_size = 5
     blur_passes = 1 # 0 disables blurring
     noise = 0.0117
