--- a/hyprland-setup/.config/hypr/hyprland/auto-start.conf
+++ b/hyprland-setup/.config/hypr/hyprland/auto-start.conf
@@ -1,13 +1,9 @@
-#################
-### AUTOSTART ###
-#################
-
-exec-once = swaybg -i ~/dotfiles/wallpapers/1.jpg
+exec-once = swaybg -i ~/Pictures/wallpapers/1.jpg
 exec-once = waybar & swaync & hypridle & hyprpaper
 exec-once = swayosd-server
 exec-once = swayosd-libinput-backend
 exec-once = fcitx5
 
-exec-once = ~/dotfiles/scripts/.config/scripts/auto-start.sh
-exec-once = ~/dotfiles/scripts/.config/scripts/auto-change-wallpaper.sh
-exec-once = ~/dotfiles/scripts/.config/scripts/battery-notify.sh
+exec-once = ~/.config/scripts/auto-start.sh
+exec-once = ~/.config/scripts/auto-change-wallpaper.sh
+exec-once = ~/.config/scripts/battery-notify.sh
