--- a/hyprland-setup/.config/hypr/hyprland/keybinds.conf
+++ b/hyprland-setup/.config/hypr/hyprland/keybinds.conf
@@ -23,8 +23,9 @@ bind = $mainMod, O, togglesplit, # dwindle
 # System
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, ESCAPE, exec, wlogout
-bind = ,PRINT, exec, hyprshot -m window
-bind = SHIFT, PRINT, exec, hyprshot -m region
+bind = ,PRINT, exec, hyprshot -m output -o ~/Pictures/screenshots
+bind = SHIFT, PRINT, exec, hyprshot -zm region -o ~/Pictures/screenshots
+bind = $mainMod SHIFT, PRINT, exec, hyprshot -zm window -o ~/Pictures/screenshots
 
 # Lid Switch
 bindl=,switch:on:Lid Switch, exec, hyprctl dispatch dpms off && hyprctl dispatch exec hyprlock
