--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,50 +1,50 @@
-preload = ~/dotfiles/wallpapers/1.jpg
-preload = ~/dotfiles/wallpapers/2.jpg
-preload = ~/dotfiles/wallpapers/3.jpg
-preload = ~/dotfiles/wallpapers/4.jpg
-preload = ~/dotfiles/wallpapers/5.jpg
-preload = ~/dotfiles/wallpapers/6.jpg
-preload = ~/dotfiles/wallpapers/7.jpg
-preload = ~/dotfiles/wallpapers/8.jpg
-preload = ~/dotfiles/wallpapers/9.jpg
-preload = ~/dotfiles/wallpapers/10.jpg
-preload = ~/dotfiles/wallpapers/11.jpg
-preload = ~/dotfiles/wallpapers/12.jpg
-preload = ~/dotfiles/wallpapers/13.jpg
-preload = ~/dotfiles/wallpapers/14.jpg
-preload = ~/dotfiles/wallpapers/15.jpg
-preload = ~/dotfiles/wallpapers/16.jpg
-preload = ~/dotfiles/wallpapers/17.jpg
-preload = ~/dotfiles/wallpapers/18.jpg
-preload = ~/dotfiles/wallpapers/19.jpg
-preload = ~/dotfiles/wallpapers/20.jpg
-preload = ~/dotfiles/wallpapers/21.jpg
-preload = ~/dotfiles/wallpapers/22.jpg
-preload = ~/dotfiles/wallpapers/23.jpg
+preload = ~/Pictures/wallpapers/1.jpg
+preload = ~/Pictures/wallpapers/2.jpg
+preload = ~/Pictures/wallpapers/3.jpg
+preload = ~/Pictures/wallpapers/4.jpg
+preload = ~/Pictures/wallpapers/5.jpg
+preload = ~/Pictures/wallpapers/6.jpg
+preload = ~/Pictures/wallpapers/7.jpg
+preload = ~/Pictures/wallpapers/8.jpg
+preload = ~/Pictures/wallpapers/9.jpg
+preload = ~/Pictures/wallpapers/10.jpg
+preload = ~/Pictures/wallpapers/11.jpg
+preload = ~/Pictures/wallpapers/12.jpg
+preload = ~/Pictures/wallpapers/13.jpg
+preload = ~/Pictures/wallpapers/14.jpg
+preload = ~/Pictures/wallpapers/15.jpg
+preload = ~/Pictures/wallpapers/16.jpg
+preload = ~/Pictures/wallpapers/17.jpg
+preload = ~/Pictures/wallpapers/18.jpg
+preload = ~/Pictures/wallpapers/19.jpg
+preload = ~/Pictures/wallpapers/20.jpg
+preload = ~/Pictures/wallpapers/21.jpg
+preload = ~/Pictures/wallpapers/22.jpg
+preload = ~/Pictures/wallpapers/23.jpg
 
-wallpaper = ~/dotfiles/wallpapers/1.jpg
-wallpaper = ~/dotfiles/wallpapers/2.jpg
-wallpaper = ~/dotfiles/wallpapers/3.jpg
-wallpaper = ~/dotfiles/wallpapers/4.jpg
-wallpaper = ~/dotfiles/wallpapers/5.jpg
-wallpaper = ~/dotfiles/wallpapers/6.jpg
-wallpaper = ~/dotfiles/wallpapers/7.jpg
-wallpaper = ~/dotfiles/wallpapers/8.jpg
-wallpaper = ~/dotfiles/wallpapers/9.jpg
-wallpaper = ~/dotfiles/wallpapers/10.jpg
-wallpaper = ~/dotfiles/wallpapers/11.jpg
-wallpaper = ~/dotfiles/wallpapers/12.jpg
-wallpaper = ~/dotfiles/wallpapers/13.jpg
-wallpaper = ~/dotfiles/wallpapers/14.jpg
-wallpaper = ~/dotfiles/wallpapers/15.jpg
-wallpaper = ~/dotfiles/wallpapers/16.jpg
-wallpaper = ~/dotfiles/wallpapers/17.jpg
-wallpaper = ~/dotfiles/wallpapers/18.jpg
-wallpaper = ~/dotfiles/wallpapers/19.jpg
-wallpaper = ~/dotfiles/wallpapers/20.jpg
-wallpaper = ~/dotfiles/wallpapers/21.jpg
-wallpaper = ~/dotfiles/wallpapers/22.jpg
-wallpaper = ~/dotfiles/wallpapers/23.jpg
+wallpaper = ~/Pictures/wallpapers/1.jpg
+wallpaper = ~/Pictures/wallpapers/2.jpg
+wallpaper = ~/Pictures/wallpapers/3.jpg
+wallpaper = ~/Pictures/wallpapers/4.jpg
+wallpaper = ~/Pictures/wallpapers/5.jpg
+wallpaper = ~/Pictures/wallpapers/6.jpg
+wallpaper = ~/Pictures/wallpapers/7.jpg
+wallpaper = ~/Pictures/wallpapers/8.jpg
+wallpaper = ~/Pictures/wallpapers/9.jpg
+wallpaper = ~/Pictures/wallpapers/10.jpg
+wallpaper = ~/Pictures/wallpapers/11.jpg
+wallpaper = ~/Pictures/wallpapers/12.jpg
+wallpaper = ~/Pictures/wallpapers/13.jpg
+wallpaper = ~/Pictures/wallpapers/14.jpg
+wallpaper = ~/Pictures/wallpapers/15.jpg
+wallpaper = ~/Pictures/wallpapers/16.jpg
+wallpaper = ~/Pictures/wallpapers/17.jpg
+wallpaper = ~/Pictures/wallpapers/18.jpg
+wallpaper = ~/Pictures/wallpapers/19.jpg
+wallpaper = ~/Pictures/wallpapers/20.jpg
+wallpaper = ~/Pictures/wallpapers/21.jpg
+wallpaper = ~/Pictures/wallpapers/22.jpg
+wallpaper = ~/Pictures/wallpapers/23.jpg
 
 splash = false
 ipc = on
