--- a/lazygit/.config/lazygit/config.yml
+++ b/lazygit/.config/lazygit/config.yml
@@ -1,6 +1,6 @@
 customCommands:
   - key: "C"
-    command: "git cz"
+    command: "git cz --disable-emoji"
     description: "commit with commitizen"
     context: "files"
     loadingText: "opening commitizen commit tool"
