feat: add more keybind

--- a/hyprland-setup/.config/hypr/hyprland/keybinds.conf
+++ b/hyprland-setup/.config/hypr/hyprland/keybinds.conf
@@ -9,11 +9,13 @@ $browser = zen-twilight
 $mainMod = SUPER
 $key = tab
 $reverse = grave
+$swaync=swaync-client -t -sw
 
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
 # bind = $mainMod, ESCAPE, exit,
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, $swaync
+bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, M, fullscreen
 bind = $mainMod, Y, togglefloating,
